Fix dark mode

--- a/main.css
+++ b/main.css
@@ -16,6 +16,11 @@ body {
 	font-size: 1rem; /* Equivalent to the base font size */
 	background-color: #fff;
 	color: #000;
+	padding: 46px 0 0 0;
+}
+
+small {
+	font-size: .9rem;
 }
 
 .container {
@@ -39,12 +44,6 @@ body {
 	max-width: 512px;
 }
 
-.heading h3 {
-	font-size: 1.5rem;
-	color: #0c8d00;
-	margin-bottom: 10px;
-}
-
 #message {
 	font-size: 1.25rem;
 	color: #063102;
@@ -57,7 +56,7 @@ body {
 
 .input-group label {
 	display: block;
-	margin-bottom: 5px;
+	margin-bottom: 3px;
 }
 
 .input-group input,
@@ -82,7 +81,7 @@ body {
 	align-items: center;
 	flex-direction: column;
 	background-color: #fff;
-	height: 430px; /* Increase height of the results container */
+	height: 380px; /* Increase height of the results container */
 }
 
 .hidden {
@@ -91,14 +90,15 @@ body {
 
 #langSelect {
 	position: fixed;
-	top: 10px;
-	right: 10px;
+	top: 9px;
+	right: 9px;
 	appearance: none;
 	padding: 5px;
 	font-size: 1rem;
 	border: none;
 	background-color: transparent;
 	color: #000;
+	width: 30px;
 }
 
 /* Styles for flag icons */
@@ -106,6 +106,18 @@ body {
 	margin: 0;
 	padding: 0;
 	font-size: 1.25rem;
+}
+
+header {
+	text-align: center;
+	font-size: 1.1rem;
+	color: #fff;
+	background-color: #0c8d00;
+	height: 46px;
+	padding: 9px;
+	position: fixed;
+	top: 0;
+	width: 100%;
 }
 
 @media (max-width: 666px) {
@@ -135,48 +147,10 @@ body {
 
 }
 
-/* Dark mode styles */
-@media (prefers-color-scheme: dark) {
-	body {
-		background-color: #121212;
-		color: #fff;
-	}
-
-	.calculator {
-		background-color: #1e1e1e;
-	}
-
-	.input-group input,
-	.input-group button,
-	.input-group select {
-		background-color: #2c2c2c;
-		color: #fff;
-		border: 1px solid #444;
-	}
-
-	.input-group button {
-		background-color: #0c8d00;
-		color: #fff;
-	}
-
-	.results {
-		background-color: #1e1e1e;
-	}
-
-	#message {
-		color: #fff;
-	}
-
-	#langSelect {
-		background-color: #2c2c2c;
-		color: #fff;
-	}
-}
-
 /* Adjust the height of the canvas for better visibility */
 canvas#data-set {
 	height: 100%;
-	max-height: 350px;
+	max-height: 280px;
 }
 
 .compound-form .input-group {
@@ -216,9 +190,8 @@ canvas#data-set {
 
 .input-container input {
 	flex: 1;
-	padding: 10px 0;
-	border: none; /*1px solid #ddd;*/
-	/*border-radius: 5px;*/
+	padding: 9px 0;
+	border: none;
 	text-align: right;
 	background-color: transparent;
 }
@@ -237,4 +210,53 @@ input[type=number] {
 .unit {
 	margin-left: 10px;
 	color: #666;
+}
+
+/* Dark mode styles */
+@media (prefers-color-scheme: dark) {
+	body {
+		background-color: #121212;
+		color: #fff;
+	}
+
+	.calculator {
+		background-color: #1e1e1e;
+		color: #fff;
+	}
+
+	.input-group input,
+	.input-group button,
+	.input-group select {
+		color: #fff;
+	}
+
+	.compound-form fieldset {
+		background-color: #333;
+	}
+
+	.compound-form label {
+		color: #fff;
+	}
+
+	.unit {
+		color: #bbb;
+	}
+
+	.input-group button {
+		background-color: #0c8d00;
+		color: #fff;
+	}
+
+	.results {
+		background-color: #1e1e1e;
+	}
+
+	#message {
+		color: #fff;
+	}
+
+	#langSelect {
+		background-color: #2c2c2c;
+		color: #fff;
+	}
 }
